Replace button text and link in index.html

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </a>
         </li>
         <li>
-            <a href=" " class="link-button" target="_blank">
-              Ignorem este butão(Por favor)
+            <a href="https://youtube.com/shorts/2hW2e660lIk?si=zRL7YKAyxVgov-Tm" class="link-button" target="_blank">
+              Nada
                 <i class="fas fa-ellipsis-h link-options-icon"></i>
             </a>
         </li>
